# PhishingEmail

./: emails.json  extract.py  jsonTOeml.py  pyproject.toml  year2005.txt
PhishingEmail.egg-info/: PKG-INFO  SOURCES.txt
